# EntityComponentSystem

./: CMakeLists.txt  README.md
EntityComponentSystem/: CMakeLists.txt  ecsTests.cpp
EntityComponentSystem/ComponentClasses/: LifetimeComponent.hpp  PhysicsComponent.hpp
EntityComponentSystem/Entities/: EntitiesManager.hpp
EntityComponentSystem/Pools/: ComponentObjectPool.hpp  ComponentPool.hpp  EntitiesObjectPool.hpp  EntitiesPool.hpp
EntityComponentSystem/Systems/: DecLifetimeSystem.hpp  DummySystem.hpp  MoveSystem.hpp
EntityComponentSystem/Utilities/: EntitiesObjectPool.hpp
